k8s/ingress/student-app-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: student-app-ingress
  namespace: k8s-full-stack-example
spec:
  rules:
  - host: 35.192.72.191.nip.io
  - http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: student-app-client-service
              port:
                number: 80
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: student-app-api
              port:
                number: 8080
